<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F4EEEE"
    tools:context=".ui.fragments.authen.DoctorFragment">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@android:color/white"
        android:elevation="@dimen/_8sdp"
        android:paddingTop="@dimen/_10sdp"
        android:text="@string/register_account"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_16sdp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"

        android:scrollbars="none">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_16sdp"
            app:cardCornerRadius="@dimen/_10sdp"
            android:elevation="@dimen/_10sdp"
            android:layout_margin="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etl_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:layout_height="wrap_content"
                    android:hint="Name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        tools:ignore="KeyboardInaccessibleWidget" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_phone"
                    android:layout_marginTop="@dimen/_2sdp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="wrap_content"
                    android:hint="Phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        tools:ignore="KeyboardInaccessibleWidget" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:hint="Email Address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_add"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        tools:ignore="KeyboardInaccessibleWidget" />
                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:id="@+id/layout_five"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_16sdp"
                        android:layout_marginRight="@dimen/_4sdp"
                        android:text="@string/upload_certifications"
                        android:layout_gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/_15sdp" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="@dimen/_120sdp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_20sdp"
                            android:background="@color/design_default_color_primary"
                            android:backgroundTint="@color/cardview_light_background"
                            android:elevation="@dimen/_10sdp"
                            android:ellipsize="end"
                            android:focusable="false"
                            android:maxLines="1"
                            android:text="Choose File "
                            android:textAlignment="center"
                            android:textColor="@android:color/holo_blue_light"
                            tools:ignore="KeyboardInaccessibleWidget" />
                    </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:passwordToggleEnabled="true"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="Password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:inputType="textPassword"
                        tools:ignore="KeyboardInaccessibleWidget" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:passwordToggleEnabled="true"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"

                    android:hint="Conform Password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_conform_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        tools:ignore="KeyboardInaccessibleWidget" />
                </com.google.android.material.textfield.TextInputLayout>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/how_do_you_find_us"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/on_facebook" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/on_instagram" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/on_twitter" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/on_google_search" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/on_youtube_ad" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="On a Friend" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="other Platforms" />
                </RadioGroup>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#1285E1"
                    android:textSize="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:text="Register" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</RelativeLayout>